syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.lms.grpc";
package user;

service UserService {
  rpc GetUsersByIds (GetUsersByIdsRequest) returns (GetUsersByIdsResponse);
}

message GetUsersByIdsRequest {
  repeated string ids = 1;
}

message GetUsersByIdsResponse {
  repeated SlimUser users = 1;
}

message SlimUser {
  string id = 1;
  string name = 2;
  string photoUrl = 3;
}